[project]
name = "nordstern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "simpy>=4.1.1",
]
[project]
name = "jammer-localization"
version = "0.1.0"
dependencies = [
    "simpy",
    "numpy",
    "matplotlib"
]
