[project]
name = "nordstern"
version = "0.1.0"
description = "Battlefield drone navigation using phased array AoA, IMU, and RF signal events"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.1.1",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.6.1",
    "simpy>=4.1.1",
]
